# tuicommander

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  GIX_PORTING.md  IDEAS.md  LICENSE  Makefile  PRODUCT.md  README.md  SPEC.md  THIRD_PARTY_NOTICES.md  biome.json  index.html  mobile.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  to-test.md  todo.md  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  FEATURES.md  README.md  SUMMARY.md  UI_CHANGES.md  book.toml  context-capture-spec.md  index.md  multi-github-com-accounts-plan.md  plugins-style.md  plugins.md  pty.md  regression-last-month.md  regression-report.html  release-checklist.md  sync-matrix.md  tuic-sdk.md
plans/: activity-center-plugin-system.md  performance-review.md
public/: mobile-manifest.json  sw.js
reviews/: review-2026-02-16-whole-project.md  review-2026-02-17-863014c.md  review-2026-02-20-post-v0.3.0.md  review-2026-02-21-daily-refactor.md  review-2026-02-22-full-codebase.md  review-2026-02-23-terminal-resize-debounce.md  review-2026-02-24-kitty-ghostty-terminal.md  review-2026-02-25-get-merged-branches.md  review-2026-02-27-editor-search-story420.md  review-2026-02-27-story415-git-cli.md
scripts/: dev-install.sh  generate-release-notes.sh
src/: App.tsx  FloatingTerminal.tsx  agents.ts  debugGlobals.ts  deep-link-handler.ts  error-handler.ts  global.css  globals.d.ts  index.tsx  invoke.ts  keybindingDefaults.ts  menuDedup.ts  notifications.ts  panelRouter.tsx  platform.ts  rate-limit.ts  styles.css  themes.ts  transport.ts
src-tauri/: .taurignore  Cargo.toml  Info.plist  audit.toml  build-sidecar.mjs  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: tuic-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/crates/tuic-bridge/: Cargo.toml
src-tauri/crates/tuic-bridge/src/: main.rs
src-tauri/crates/tuic-cli/: Cargo.toml
src-tauri/crates/tuic-cli/src/: ipc.rs  main.rs
src-tauri/icons/: icon.icns
src-tauri/patches/alacritty_terminal/src/: event.rs  event_loop.rs  index.rs  selection.rs  sync.rs  thread.rs  vi_mode.rs
src-tauri/patches/alacritty_terminal/src/grid/: mod.rs  resize.rs  row.rs  storage.rs  tests.rs
src-tauri/patches/alacritty_terminal/src/term/: cell.rs  color.rs  mod.rs  search.rs
src-tauri/patches/alacritty_terminal/src/tty/: mod.rs  unix.rs
src-tauri/patches/alacritty_terminal/src/tty/windows/: blocking.rs  child.rs  conpty.rs  mod.rs
src-tauri/patches/alacritty_terminal/tests/: ref.rs
src-tauri/patches/alacritty_terminal/tests/ref/colored_underline/: grid.json
src-tauri/patches/alacritty_terminal/tests/ref/grid_reset/: grid.json
src-tauri/patches/alacritty_terminal/tests/ref/issue_855/: grid.json
src-tauri/patches/alacritty_terminal/tests/ref/newline_with_cursor_beyond_scroll_region/: grid.json
src-tauri/patches/alacritty_terminal/tests/ref/origin_goto/: grid.json
src-tauri/patches/alacritty_terminal/tests/ref/wrapline_alt_toggle/: grid.json
src-tauri/src/: agent.rs  agent_hook.rs  agent_hook_codex.rs  agent_hook_commands.rs  agent_hook_installer.rs  agent_hook_opencode.rs  agent_mcp.rs  agent_session.rs  ai_chat.rs  ai_chat_registry.rs  app_logger.rs  chrome.rs  claude_usage.rs  cli.rs  config.rs  content_index.rs  cpu_watchdog.rs  credentials.rs  diff_renderer.rs  diff_triage.rs  dir_watcher.rs  error_classification.rs  fs.rs  generators.rs  git.rs  git_cli.rs  git_graph.rs  git_reads.rs  github.rs  github_account.rs  github_auth.rs  github_compat_tests.rs  github_debug.rs  github_poller.rs  global_hotkey.rs  head_watcher.rs  input_line_buffer.rs  keyring_cache.rs  lib.rs  llm_api.rs  (+40 more)
src-tauri/src/ai_agent/: commands.rs  context.rs  conversation.rs  conversation_engine.rs  engine.rs  enrichment.rs  knowledge.rs  mod.rs  safety.rs  sandbox.rs  scheduler.rs  tools.rs  triggers.rs  tui_detect.rs  watcher.rs
src-tauri/src/dictation/: audio.rs  commands.rs  corrections.rs  fn_key_monitor.rs  mod.rs  model.rs  permission.rs  streaming.rs  transcribe.rs  vad.rs
src-tauri/src/fixtures/choice_prompts/: claude-code_bash-confirm.json  claude-code_bash-confirm.txt  claude-code_edit-confirm.json  claude-code_edit-confirm.txt
src-tauri/src/fixtures/choice_prompts/negative/: code-block-numbered.txt  markdown-numbered-list.txt
src-tauri/src/mcp_http/: agent_routes.rs  ai_routes.rs  ai_stream.rs  ai_terminal.rs  auth.rs  claude_routes.rs  config_routes.rs  dictation_routes.rs  fs_routes.rs  git_routes.rs  github_routes.rs  guards.rs  log_routes.rs  mcp_transport.rs  mod.rs  plugin_docs.rs  plugin_routes.rs  process_monitor.html  session.rs  sse_routes.rs  static_files.rs  types.rs  watcher_routes.rs  worktree_routes.rs
src-tauri/src/mcp_oauth/: callback_server.rs  commands.rs  dcr.rs  discovery.rs  flow.rs  mod.rs  token.rs
src-tauri/src/mcp_proxy/: http_client.rs  mod.rs  registry.rs  stdio_client.rs
src-tauri/src/themes/: catppuccin-mocha.json  darksun.json  deep-black.json  delicate-one.json  minimal-kiwi.json  nord.json  solarized-dark.json  tokyo-night.json  vscode-light.json
src-tauri/src/tunnels/: agent.rs  command.rs  manager.rs  mod.rs  port.rs  profile.rs  supervisor.rs  tauri_commands.rs
stories/: 125-4ce1-complete-P2-tab-context-menu-with-iterm2-style-operations.md  129-d818-complete-P2-fix-font-preference-duplication-localstorage-vs-ru.md  130-bcd4-complete-P2-clear-stale-terminal-ids-from-repositories-store-o.md  131-cd09-complete-P3-stop-persisting-session-ephemeral-tab-state-to-loc.md  137-2b4e-complete-P1-fix-repo-options-menu-overlay-blocking-sidebar-int.md  139-3788-complete-P1-deduplicate-settings-css-remove-repo-settings-clas.md  140-cddf-complete-P1-extract-settingsshell-component-from-duplicated-pa.md  147-55c8-complete-P1-websocket-streaming-for-pty-output.md  (+316 more)
tools/relay/: .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml
tools/relay/src/: auth.rs  db.rs  lib.rs  main.rs  push.rs  relay.rs  routes.rs  types.rs
tools/relay/tests/: auth_db.rs  relay_core.rs
(+1171 files in other folders)
