[workspace]
members = [".", "crates/tuic-bridge"]

[package]
name = "tuicommander"
version = "1.0.4"
description = "TUICommander - Native platform for AI coding agents"
authors = ["Stefano Straus <github.com/sstraus>"]
edition = "2024"
default-run = "tuicommander"

[profile.release]
incremental = true
[lib]
name = "tuicommander_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
parking_lot = "0.12"
regex = "1"
lazy_static = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-single-instance = "2"
whisper-rs = "0.16"
cpal = "0.17"
rodio = "0.20"
reqwest = { version = "0.13", features = ["stream", "json", "form"] }
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
async-stream = "0.3"
tauri-plugin-window-state = "2.4.1"
bcrypt = "0.19"
base64 = "0.22"
include_dir = { version = "0.7.4", features = ["glob"] }
mime_guess = "2.0.5"
tower-http = { version = "0.6.8", features = ["cors", "compression-gzip", "compression-br"] }
rand = "0.10"
libc = "0.2"
notify = "8"
gh-token = "0.1"
keepawake = "0.6"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
zip = "8"
glob = "0.3"
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
vt100 = "0.16"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-server-dual-protocol = "0.7"
web-push-native = "0.4"
base64ct = { version = "1", features = ["alloc"] }
anyhow = "1"
bm25 = "2.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
genai = "0.6.0-beta.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = { version = "0.4", optional = true }

[features]
default = []
# GPU features for Linux builds (macOS always has Metal, Windows always has Vulkan via target deps)
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
tokio-console = ["console-subscriber"]

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "block2"] }
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.16", features = ["vulkan"] }
windows-sys = { version = "0.61", features = ["Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
serial_test = "3"
mockito = "1"

