[package]
name = "tuic-relay"
version = "0.1.0"
edition = "2021"
description = "Blind E2E-encrypted WebSocket relay for TUICommander mobile access"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
futures-util = { version = "0.3", features = ["sink"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

[dev-dependencies]
tokio-tungstenite = "0.26"
http = "1"
reqwest = "0.12"
